--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="CodeMirror" version="2.37" targetFramework="net45" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
