add course packages list view & move elmah to in memory storage

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -16,7 +16,6 @@
 	</configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
-		<add name="elmah-sqlservercompact" connectionString="Data Source=|DataDirectory|\Elmah.sdf" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
@@ -49,9 +48,16 @@
 		<validation validateIntegratedModeConfiguration="false" />
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
-            <mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
-            <mimeMap fileExtension="zip" mimeType="application/zip" />
-        </staticContent>
+			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
+			<mimeMap fileExtension="zip" mimeType="application/zip" />
+		</staticContent>
+		<security>
+			<requestFiltering>
+				<hiddenSegments>
+					<add segment="Courses.Staging"/>
+				</hiddenSegments>
+			</requestFiltering>
+		</security>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -104,17 +110,17 @@
 				See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
 				more information on remote access and securing ELMAH.
 		-->
-		<security allowRemoteAccess="false" />
-		<errorLog type="Elmah.SqlServerCompactErrorLog, Elmah" connectionStringName="elmah-sqlservercompact" />
+		<security allowRemoteAccess="true" />
+		<errorLog type="Elmah.MemoryErrorLog, Elmah" size="200" />
 	</elmah>
-	<location path="elmah.axd" inheritInChildApplications="false">
+	<location path="elmah.axd">
 		<system.web>
 			<httpHandlers>
 				<add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
 			</httpHandlers>
 			<authorization>
 				<allow roles="admin" />
-				<deny users="*" />  
+				<deny users="*" />
 			</authorization>
 		</system.web>
 		<system.webServer>
@@ -123,10 +129,4 @@
 			</handlers>
 		</system.webServer>
 	</location>
-	<system.data>
-		<DbProviderFactories>
-			<remove invariant="System.Data.SqlServerCe.4.0" />
-			<add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-		</DbProviderFactories>
-	</system.data>
 </configuration>
