--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -660,6 +660,7 @@
     <Content Include="codemirror\README.md" />
     <Content Include="Courses.Staging\BasicProgramming.zip" />
     <Content Include="Courses.Staging\linq.zip" />
+    <Content Include="Courses.Staging\Web.config" />
     <None Include="encoding.xsd">
       <SubType>Designer</SubType>
     </None>
