--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AnalyticsTableInfo.cs" />
     <Compile Include="BaseSlideTests.cs" />
     <Compile Include="CollectionExtensions.cs" />
+    <Compile Include="CommentAfterExerciseIsSolved.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CourseManager.cs" />
     <Compile Include="CSharp\CSharpSlideLoader.cs" />
