--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -7,13 +7,13 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-		<sectionGroup name="elmah">
-			<section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
-			<section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
-			<section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
-			<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
-		</sectionGroup>
-	</configSections>
+		
+	<sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup></configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
@@ -22,6 +22,14 @@
 		<add key="webpages:Enabled" value="false" />
 		<add key="ClientValidationEnabled" value="true" />
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
+		<add key="elmah.mvc.disableHandler" value="false" />
+		<add key="elmah.mvc.disableHandleErrorFilter" value="false" />
+		<!-- Управление доступом в самой Elmah не работает:  https://github.com/alexanderbeletsky/elmah-mvc/issues/28. Авторизация сделана средствами ASP.NET - см ниже -->
+		<add key="elmah.mvc.requiresAuthentication" value="false" />
+		<add key="elmah.mvc.IgnoreDefaultRoute" value="false" /> 
+		<add key="elmah.mvc.allowedRoles" value="*" />
+		<add key="elmah.mvc.allowedUsers" value="*" />
+		<add key="elmah.mvc.route" value="elmah" />
 	</appSettings>
 	<system.web>
 		<authentication mode="None" />
@@ -32,20 +40,20 @@
 		</compilation>
 		<httpRuntime targetFramework="4.5" />
 		<customErrors mode="Off" />
-		<httpModules>
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
-			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
-			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
-		</httpModules>
-	</system.web>
+		
+	<httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules></system.web>
 	<system.webServer>
 		<modules>
 			<remove name="FormsAuthenticationModule" />
-			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
-			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
-			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
-		</modules>
-		<validation validateIntegratedModeConfiguration="false" />
+			
+			
+			
+		<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules>
+		
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
 			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
@@ -54,11 +62,11 @@
 		<security>
 			<requestFiltering>
 				<hiddenSegments>
-					<add segment="Courses.Staging"/>
+					<add segment="Courses.Staging" />
 				</hiddenSegments>
 			</requestFiltering>
 		</security>
-	</system.webServer>
+	<validation validateIntegratedModeConfiguration="false" /></system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -67,7 +75,7 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -106,27 +114,15 @@
 		</providers>
 	</entityFramework>
 	<elmah>
-		<!--
-				See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
-				more information on remote access and securing ELMAH.
-		-->
-		<security allowRemoteAccess="true" />
-		<errorLog type="Elmah.MemoryErrorLog, Elmah" size="200" />
+		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200"/>
 	</elmah>
-	<location path="elmah.axd">
+	<location path="elmah">
+		<!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
 		<system.web>
-			<httpHandlers>
-				<add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
-			</httpHandlers>
 			<authorization>
 				<allow roles="admin" />
 				<deny users="*" />
 			</authorization>
 		</system.web>
-		<system.webServer>
-			<handlers>
-				<add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
-			</handlers>
-		</system.webServer>
 	</location>
 </configuration>
