--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -2,9 +2,8 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="elmah" version="1.2.2" targetFramework="net45" />
-  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
-  <package id="elmah.sqlservercompact" version="1.2" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.1" targetFramework="net45" />
+  <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
@@ -40,6 +39,5 @@
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="SqlServerCompact" version="4.0.8482.1" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
