--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -78,11 +78,17 @@
     <Compile Include="CommentAfterExerciseIsSolved.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="CourseManager.cs" />
+    <Compile Include="CSharp\BaseNamingChecker.cs" />
+    <Compile Include="CSharp\BaseStyleValidator.cs" />
     <Compile Include="CSharp\CSharpSlideLoader.cs" />
     <Compile Include="CSharp\CSharpSolutionValidator.cs" />
     <Compile Include="CSharp\ExerciseBuilder.cs" />
     <Compile Include="CSharp\BlocksBuilder.cs" />
     <Compile Include="CSharp\ExerciseAttribute.cs" />
+    <Compile Include="CSharp\NamingCaseChecker_should.cs" />
+    <Compile Include="CSharp\NamingCaseStyleValidator.cs" />
+    <Compile Include="CSharp\RedundantIfStyleValidator.cs" />
+    <Compile Include="CSharp\RedundantIfStyleValidator_should.cs" />
     <Compile Include="ISolutionValidator.cs" />
     <Compile Include="ExerciseSlide.cs" />
     <Compile Include="ExpectedOutput.cs" />
