--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -52,7 +52,10 @@
 			
 			
 			
-		<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" /><add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" /><add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" /></modules>
+		<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+		</modules>
 		
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
@@ -114,6 +117,7 @@
 		</providers>
 	</entityFramework>
 	<elmah>
+		<security allowRemoteAccess="1" />
 		<errorLog type="Elmah.MemoryErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" size="200"/>
 	</elmah>
 	<location path="elmah">
