--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -779,6 +779,7 @@
     <Content Include="Views\Analytics\UsersProgress.cshtml" />
     <Content Include="Views\Analytics\SlideRatings.cshtml" />
     <Content Include="Views\Analytics\UserSolutions.cshtml" />
+    <Content Include="Views\Analytics\SystemStatistics.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
