--- a/src/courses/BasicProgramming/BasicProgramming.csproj
+++ b/src/courses/BasicProgramming/BasicProgramming.csproj
@@ -154,7 +154,7 @@
     <Compile Include="Slides\U05_Collections\S010_List.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Slides\U05_Collections\S011_Cipther.cs" />
+    <Compile Include="Slides\U05_Collections\S011_CipherTask.cs" />
     <Compile Include="Slides\U05_Collections\S020_Dictionary.cs">
       <SubType>Code</SubType>
     </Compile>
